Re-ordered amd re-named notebooks.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -55,7 +55,7 @@
     "### Ground and Buildings\n",
     "First, we use data fusion to automatically label ground and building points.\n",
     "\n",
-    "For details and more options, see [2. Data fusion](2.%20Data%20fusion.ipynb)."
+    "For details and more options, see notebook [2. Ground and Buildings](2.%20Ground%20and%20Buildings.ipynb)."
    ]
   },
   {
@@ -85,7 +85,7 @@
     "\n",
     "Then we label cars by searching for 'car-like' clusters above road segments.\n",
     "\n",
-    "For details and on how to generate the BGT road csv file, see [4. Label cars](4.%20Label%20cars.ipynb)."
+    "For details and on how to generate the BGT road csv file, see notebook [3. Cars](3.%20Cars.ipynb)."
    ]
   },
   {
@@ -116,9 +116,9 @@
    "source": [
     "### Pole-like objects\n",
     "\n",
-    "Finally we look for 'pole-like' objects such as street lights and traffic signs.\n",
+    "Finally we look for 'pole-like' objects such as trees, street lights and traffic signs.\n",
     "\n",
-    "For details and more options, see [2. BGT point fusion](2.%20BGT%20point%20fusion.ipynb)."
+    "For details and more options, see notebook [4. Pole-like objects](4.%20Pole-like%20objects.ipynb)."
    ]
   },
   {
@@ -131,11 +131,13 @@
     "# File with <x,y> coordinates of pole-like objects.\n",
     "bgt_data_file = '../datasets/bgt/custom_points_' + tile_code + '.csv'\n",
     "\n",
-    "# Parameter settings.\n",
+    "# Parameter settings for each type of object.\n",
+    "tree_params = {'seed_height': 1.75, 'min_points': 500, 'max_r': 0.5, 'label_height': 5.}\n",
     "light_params = {'seed_height': 2.25, 'min_points': 400, 'max_r': 0.2, 'label_height': 5.}\n",
     "sign_params = {'seed_height': 1.75, 'min_points': 200, 'max_r': 0.2, 'min_height': 1.2, 'z_max': 2., 'label_height': 3.}\n",
     "\n",
     "# Fusers for BGT point data.\n",
+    "tree_fuser = fusion.BGTPointFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=tree_params)\n",
     "light_fuser = fusion.BGTPointFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=light_params)\n",
     "sign_fuser = fusion.BGTPointFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=sign_params)"
    ]
@@ -152,7 +154,7 @@
     "\n",
     "Then, we use region growing to refine the buildings. This will make sure that protruding elements such as balconies are labelled correctly.\n",
     "\n",
-    "For details, installation instructions and more options, see [3. Region growing](3.%20Region%20growing.ipynb)."
+    "For details, installation instructions and more options, see notebook [5. Region growing](5.%20Region%20growing.ipynb)."
    ]
   },
   {
@@ -177,7 +179,7 @@
     "\n",
     "We also use region growing to refine the pole-like objects. We do this separately for the top and bottom since the best settings for each might differ.\n",
     "\n",
-    "For details and more options, see [2. BGT point fusion](2.%20BGT%20point%20fusion.ipynb)."
+    "For details and more options, see notebook [4. Pole-like objects](4.%20Pole-like%20objects.ipynb)."
    ]
   },
   {
@@ -188,17 +190,23 @@
    "outputs": [],
    "source": [
     "light_top_params = {'plane_height': 3.25, 'threshold': 0.05}\n",
-    "light_bottom_params = {'plane_height': 1.5, 'threshold': 0.5}\n",
+    "light_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
     "sign_top_params = {'plane_height': 1.5, 'threshold': 0.05}\n",
-    "sign_bottom_params = {'plane_height': 1.5, 'threshold': 0.5}\n",
+    "sign_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
+    "\n",
+    "tree_top_params = {'plane_height': 1.75, 'octree_level': 9, 'threshold': 0.01}\n",
+    "tree_bottom_params = {'plane_height': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
     "\n",
     "light_grower = growing.TopBottomLCC(Labels.STREET_LIGHT, ahn_reader, \n",
     "                                    top_params=light_top_params, \n",
     "                                    bottom_params=light_bottom_params)\n",
     "sign_grower = growing.TopBottomLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
     "                                   top_params=sign_top_params, \n",
-    "                                   bottom_params=sign_bottom_params)"
+    "                                   bottom_params=sign_bottom_params)\n",
+    "tree_grower = growing.TopBottomLCC(Labels.TREE, ahn_reader, \n",
+    "                                   top_params=tree_top_params, \n",
+    "                                   bottom_params=tree_bottom_params)"
    ]
   },
   {
@@ -206,6 +214,7 @@
    "id": "collaborative-durham",
    "metadata": {},
    "source": [
+    "---\n",
     "## Process the file"
    ]
   },
@@ -217,8 +226,8 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, npz_building_fuser, light_fuser, sign_fuser, car_fuser,\n",
-    "                    building_grower, light_grower, sign_grower)\n",
+    "process_sequence = (npz_ground_fuser, npz_building_fuser, car_fuser, tree_fuser, light_fuser, sign_fuser, \n",
+    "                    building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(process_sequence)\n",
     "\n",
     "start = time.time()\n",
@@ -233,6 +242,7 @@
    "id": "neural-welsh",
    "metadata": {},
    "source": [
+    "---\n",
     "## View the result (e.g. in CloudCompare)\n",
     "\n",
     "The final result can be viewed in CloudCompare. Open the out_file (e.g. datasets/pointcloud/labelled_2386_9702.laz) and change `Colors` from \"RGB\" to \"Scalar field\". For best results, use our [custom color scale](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/raw/main/media/cc_color_scale.xml).\n",
