--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -1,13 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32134cce-9eb9-4a0f-a7d1-412fda979aaa",
+   "cell_type": "markdown",
+   "id": "2372c54d-137c-4e32-89fc-3c334f26bc58",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%config Completer.use_jedi = False"
+    "# Labelling of pole-like objects\n",
+    "E.g. trees, street lights, traffic signs."
    ]
   },
   {
@@ -52,12 +51,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Select the point cloud file to process.\n",
     "tilecode = '2386_9702'\n",
-    "#tilecode = '2397_9705'\n",
     "\n",
+    "# The corresponding BGT data file.\n",
     "bgt_data_file = '../datasets/bgt/custom_points_' + tilecode + '.csv'\n",
     "\n",
-    "# Load elevation data.\n",
+    "# We need elevation data to determine object height above ground.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
     "ahn_reader = ahn_utils.NPZReader(data_folder=ahn_data_folder)"
    ]
@@ -69,8 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load labeled and grown LAS file.\n",
-    "las_file = '../datasets/pointcloud/complete_' + tilecode + '.laz'\n",
+    "# Load a (partially labelled) LAS file, e.g. from the previous step.\n",
+    "las_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "las = las_utils.read_las(las_file)\n",
     "\n",
     "labels = las.label\n",
@@ -82,7 +82,11 @@
    "id": "4ca170e6-9d85-4552-b995-828120ef3dc7",
    "metadata": {},
    "source": [
-    "## Match point objects with clusters"
+    "## Match point objects with clusters\n",
+    "\n",
+    "First we try to match all objects in the BGT data with pole-like objects in the point cloud. We look for clusters of points with specific characteristics, such as a minimum height, density, and a maximum radius.\n",
+    "\n",
+    "We start with trees, since the location data for these is most precise (in Amsterdam)."
    ]
   },
   {
@@ -93,23 +97,24 @@
    "outputs": [],
    "source": [
     "# All possible parameters:\n",
-    "# params = {'r_mult': 1.5,\n",
-    "#           'search_pad': 1.5,\n",
-    "#           'max_dist': 1.2,\n",
-    "#           'voxel_res': 0.2,\n",
-    "#           'seed_height': 1.75,\n",
-    "#           'min_height': 2.,\n",
-    "#           'max_r': 0.5,\n",
-    "#           'min_points': 500,\n",
-    "#           'z_min': 0.2,\n",
-    "#           'z_max': 2.7,\n",
-    "#           'label_height': 4.}\n",
+    "# params = {'search_pad': 1.5,   # Specify the padding (in m) around the BGT object in which to search for a match in the point cloud.\n",
+    "#           'max_dist': 1.2,     # Maximum distance (in m) between the expected location and the location of a potential match.\n",
+    "#           'voxel_res': 0.2,    # Resolution of voxels used when searching for a match.\n",
+    "#           'seed_height': 1.75, # Height above ground at which to determine object dimensions.\n",
+    "#           'min_height': 2.,    # Minimum hieght for an object to be considered a match.\n",
+    "#           'max_r': 0.5,        # Maximum radius for a pole-like object to be considered a match.\n",
+    "#           'min_points': 500,   # Minimum number of points for a cluster to be considered.\n",
+    "#           'z_min': 0.2,        # Height above ground, above which to search for objects.\n",
+    "#           'z_max': 2.7,        # Height above ground, below which to search for objects.\n",
+    "#           'r_mult': 1.5,       # Multiplier for radius when performing the initial (cylinder-based) labelling.\n",
+    "#           'label_height': 4.}  # Maximum height for initial (cylinder-based) labelling.\n",
     "\n",
+    "# Object type-specific parameters.\n",
     "tree_params = {'seed_height': 1.75, 'min_points': 500, 'max_r': 0.5, 'label_height': 5.}\n",
     "light_params = {'seed_height': 2.25, 'min_points': 400, 'max_r': 0.2, 'label_height': 5.}\n",
     "sign_params = {'seed_height': 1.75, 'min_points': 200, 'max_r': 0.2, 'min_height': 1.2, 'z_max': 2., 'label_height': 3.}\n",
     "\n",
-    "# Fusers for BGT point data.\n",
+    "# Create fusers for BGT point data.\n",
     "tree_fuser = fusion.BGTPointFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=tree_params)\n",
     "light_fuser = fusion.BGTPointFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=light_params)\n",
     "sign_fuser = fusion.BGTPointFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=sign_params)"
@@ -122,37 +127,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Process the point cloud.\n",
     "mask = (labels != Labels.GROUND) & (labels != Labels.BUILDING) & (labels != Labels.CAR)\n",
     "\n",
     "start = time.time()\n",
     "tree_mask = tree_fuser.get_label_mask(points, labels, mask, tilecode)\n",
+    "labels[tree_mask] = tree_fuser.get_label()\n",
     "mask[tree_mask] = False\n",
     "end = time.time()\n",
     "print(f'Trees fused in {end-start:.2f} seconds.\\n')\n",
     "\n",
     "start = time.time()\n",
     "light_mask = light_fuser.get_label_mask(points, labels, mask, tilecode)\n",
+    "labels[light_mask] = light_fuser.get_label()\n",
     "mask[light_mask] = False\n",
     "end = time.time()\n",
     "print(f'Street lights fused in {end-start:.2f} seconds.\\n')\n",
     "\n",
     "start = time.time()\n",
     "sign_mask = sign_fuser.get_label_mask(points, labels, mask, tilecode)\n",
+    "labels[sign_mask] = sign_fuser.get_label()\n",
     "mask[sign_mask] = False\n",
     "end = time.time()\n",
     "print(f'Traffic signs fused in {end-start:.2f} seconds.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63184f00-dda5-478c-82cc-234af95ab5eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels[tree_mask] = tree_fuser.get_label()\n",
-    "labels[light_mask] = light_fuser.get_label()\n",
-    "labels[sign_mask] = sign_fuser.get_label()"
    ]
   },
   {
@@ -160,7 +157,15 @@
    "id": "9ad1a048-6541-4df8-a009-18d77e4695d9",
    "metadata": {},
    "source": [
-    "## Extend point objects using LCC region growing"
+    "## Extend point objects using LCC region growing\n",
+    "\n",
+    "In the initial labelling phase we only labelled a cylinder-based region of the point cloud at the object's location.\n",
+    "\n",
+    "We now refine the initial label by adding connected components that overlap with the initial label. This is done in two parts: close to the ground we want to be more careful, since there might be more clutter; while higher above ground we want to label the complete object without missing any part. Therefore, we use different region growing parameters for the top and bottom part of the object.\n",
+    "\n",
+    "For more details on region growing, see notebook [5. Region growing](5.%20Region%20growing.ipynb)\n",
+    "\n",
+    "This time we process the trees last, since these are harder to get right."
    ]
   },
   {
@@ -171,23 +176,31 @@
    "outputs": [],
    "source": [
     "# All possible parameters:\n",
-    "# params = {'plane_height': REQUIRED,\n",
-    "#           'octree_level': 9,\n",
-    "#           'min_comp_size': 100,\n",
-    "#           'threshold': 0.5}\n",
+    "# params = {'plane_height': REQUIRED,  # Height above ground at which to start/stop (for top/bottom) growing.\n",
+    "#           'octree_level': 9,         # Octree level for LCC method, higher means more fine-grained.\n",
+    "#           'min_comp_size': 100,      # Minimum number of points for a component to be considered.\n",
+    "#           'threshold': 0.5}          # Minimum fraction of points in a component that are already labelled initially for the component to be added.\n",
     "\n",
+    "# Parameter settings for top and bottom growing.\n",
     "light_top_params = {'plane_height': 3.25, 'threshold': 0.05}\n",
-    "light_bottom_params = {'plane_height': 1.5, 'threshold': 0.5}\n",
+    "light_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
     "sign_top_params = {'plane_height': 1.5, 'threshold': 0.05}\n",
-    "sign_bottom_params = {'plane_height': 1.5, 'threshold': 0.5}\n",
+    "sign_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
+    "tree_top_params = {'plane_height': 1.75, 'octree_level': 9, 'threshold': 0.01}\n",
+    "tree_bottom_params = {'plane_height': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
+    "\n",
+    "# Create the region growing objects.\n",
     "light_lcc = growing.TopBottomLCC(Labels.STREET_LIGHT, ahn_reader, \n",
     "                                 top_params=light_top_params, \n",
     "                                 bottom_params=light_bottom_params)\n",
     "sign_lcc = growing.TopBottomLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
     "                                top_params=sign_top_params, \n",
-    "                                bottom_params=sign_bottom_params)"
+    "                                bottom_params=sign_bottom_params)\n",
+    "tree_lcc = growing.TopBottomLCC(Labels.TREE, ahn_reader, \n",
+    "                                top_params=tree_top_params, \n",
+    "                                bottom_params=tree_bottom_params)"
    ]
   },
   {
@@ -197,6 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Process the point cloud.\n",
     "start = time.time()\n",
     "light_lcc_mask = light_lcc.get_label_mask(points, labels, mask, tilecode)\n",
     "labels[light_lcc_mask] = light_lcc.get_label()\n",
@@ -209,30 +223,7 @@
     "labels[sign_lcc_mask] = sign_lcc.get_label()\n",
     "mask[sign_lcc_mask] = False\n",
     "end = time.time()\n",
-    "print(f'Traffic signs grown in {end-start:.2f} seconds.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "675000a2-f6c0-4af8-9a22-1c16844eb37e",
-   "metadata": {},
-   "source": [
-    "### Trees, experimental"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c238f1a7-948d-457c-9b45-332a029c0b10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tree_top_params = {'plane_height': 1.75, 'octree_level': 10, 'threshold': 0.01}\n",
-    "tree_bottom_params = {'plane_height': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
-    "\n",
-    "tree_lcc = growing.TopBottomLCC(Labels.TREE, ahn_reader, \n",
-    "                                top_params=tree_top_params, \n",
-    "                                bottom_params=tree_bottom_params)\n",
+    "print(f'Traffic signs grown in {end-start:.2f} seconds.')\n",
     "\n",
     "start = time.time()\n",
     "tree_lcc_mask = tree_lcc.get_label_mask(points, labels, mask, tilecode)\n",
