Renaming of input and output files for intermediate steps.

--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -208,8 +208,10 @@
    "outputs": [],
    "source": [
     "# Select the file to process. The outfile can be set to 'None' to overwrite the file.\n",
-    "in_file = '../datasets/pointcloud/filtered_2386_9702.laz'\n",
-    "out_file = '../datasets/pointcloud/labelled_2386_9702.laz'\n",
+    "tilecode = '2386_9702'\n",
+    "\n",
+    "in_file = '../datasets/pointcloud/filtered_' + tilecode + '.laz'\n",
+    "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# Process the file.\n",
     "start = time.time()\n",
