--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -248,8 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the result.\n",
-    "out_file = '../datasets/pointcloud/poles_custom_' + tilecode + '.laz'\n",
+    "# Save the result (this will overwrite the LAS file.)\n",
+    "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "las_utils.label_and_save_las(las, labels, out_file)"
    ]
   },
