--- a/notebooks/5. Region growing.ipynb
+++ b/notebooks/5. Region growing.ipynb
@@ -134,8 +134,10 @@
    "outputs": [],
    "source": [
     "# Select the file to process. The outfile can be set to 'None' to overwrite the file.\n",
-    "in_file = '../datasets/pointcloud/labelled_2386_9702.laz'\n",
-    "out_file = '../datasets/pointcloud/grown_2386_9702.laz'\n",
+    "tilecode = '2386_9702'\n",
+    "\n",
+    "in_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
+    "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# Process the file.\n",
     "start = time.time()\n",
