Fixed based on feedback. Visualisation in notebook 0.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -26,6 +26,7 @@
     "import src.fusion as fusion\n",
     "import src.region_growing as growing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.utils.plot_utils as plot_utils\n",
     "from src.pipeline import Pipeline\n",
     "from src.utils.labels import Labels"
    ]
@@ -239,13 +240,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "neural-welsh",
+   "id": "660ca8b6-26a2-4ee3-87b1-30e3bcda1104",
    "metadata": {},
    "source": [
     "---\n",
-    "## View the result (e.g. in CloudCompare)\n",
+    "## View the result\n",
     "\n",
-    "The final result can be viewed in CloudCompare. Open the out_file (e.g. datasets/pointcloud/labelled_2386_9702.laz) and change `Colors` from \"RGB\" to \"Scalar field\". For best results, use our [custom color scale](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/raw/main/media/cc_color_scale.xml).\n",
+    "To get a quick look at the result, we can plot a slice of the labelled point cloud at a specified height."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44123d20-b21e-422c-915a-05baa4da56c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget\n",
+    "plot_utils.plot_cloud_slice(out_file, ahn_reader, plane_height=1.75)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "814efd8d-09cf-4697-9e58-3c8d2ae3e984",
+   "metadata": {},
+   "source": [
+    "### In CloudCompare\n",
+    "The final result can also be viewed in CloudCompare. Open the out_file (e.g. datasets/pointcloud/labelled_2386_9702.laz) and change `Colors` from \"RGB\" to \"Scalar field\". For best results, use our [custom color scale](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/raw/main/media/cc_color_scale.xml).\n",
     "\n",
     "The result should look like this:\n",
     "![Demo result](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/raw/main/media/examples/demo_result.png)"
