--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -23,17 +23,12 @@
     "import numpy as np\n",
     "import time\n",
     "\n",
-    "%matplotlib widget\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.patches as patches\n",
-    "\n",
     "import src.fusion as fusion\n",
     "import src.region_growing as growing\n",
     "import src.utils.las_utils as las_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
-    "import src.utils.clip_utils as clip_utils\n",
-    "from src.utils.labels import Labels\n",
-    "from src.utils.interpolation import FastGridInterpolator"
+    "from src.pipeline import Pipeline\n",
+    "from src.utils.labels import Labels"
    ]
   },
   {
@@ -128,28 +123,14 @@
    "outputs": [],
    "source": [
     "# Process the point cloud.\n",
-    "mask = (labels != Labels.GROUND) & (labels != Labels.BUILDING) & (labels != Labels.CAR)\n",
+    "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.CAR)\n",
+    "process_sequence = (tree_fuser, light_fuser, sign_fuser)\n",
+    "pipeline = Pipeline(process_sequence, exclude_labels)\n",
     "\n",
     "start = time.time()\n",
-    "tree_mask = tree_fuser.get_label_mask(points, labels, mask, tilecode)\n",
-    "labels[tree_mask] = tree_fuser.get_label()\n",
-    "mask[tree_mask] = False\n",
+    "labels = pipeline.process_cloud(tilecode, points, labels)\n",
     "end = time.time()\n",
-    "print(f'Trees fused in {end-start:.2f} seconds.\\n')\n",
-    "\n",
-    "start = time.time()\n",
-    "light_mask = light_fuser.get_label_mask(points, labels, mask, tilecode)\n",
-    "labels[light_mask] = light_fuser.get_label()\n",
-    "mask[light_mask] = False\n",
-    "end = time.time()\n",
-    "print(f'Street lights fused in {end-start:.2f} seconds.\\n')\n",
-    "\n",
-    "start = time.time()\n",
-    "sign_mask = sign_fuser.get_label_mask(points, labels, mask, tilecode)\n",
-    "labels[sign_mask] = sign_fuser.get_label()\n",
-    "mask[sign_mask] = False\n",
-    "end = time.time()\n",
-    "print(f'Traffic signs fused in {end-start:.2f} seconds.')"
+    "print(f'Fusion completed in {end-start:.2f} seconds.\\n')"
    ]
   },
   {
@@ -206,31 +187,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4957dcc4-93ca-4a3c-a515-01ce7fc99f4e",
+   "id": "09db94bd-b4b6-4082-ade4-b15834232492",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Process the point cloud.\n",
-    "start = time.time()\n",
-    "light_lcc_mask = light_lcc.get_label_mask(points, labels, mask, tilecode)\n",
-    "labels[light_lcc_mask] = light_lcc.get_label()\n",
-    "mask[light_lcc_mask] = False\n",
-    "end = time.time()\n",
-    "print(f'Street lights grown in {end-start:.2f} seconds.\\n')\n",
+    "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.CAR, Labels.TREE, Labels.STREET_LIGHT, Labels.TRAFFIC_SIGN)\n",
+    "process_sequence = (light_lcc, sign_lcc, tree_lcc)\n",
+    "pipeline = Pipeline(process_sequence, exclude_labels)\n",
     "\n",
     "start = time.time()\n",
-    "sign_lcc_mask = sign_lcc.get_label_mask(points, labels, mask, tilecode)\n",
-    "labels[sign_lcc_mask] = sign_lcc.get_label()\n",
-    "mask[sign_lcc_mask] = False\n",
+    "labels = pipeline.process_cloud(tilecode, points, labels)\n",
     "end = time.time()\n",
-    "print(f'Traffic signs grown in {end-start:.2f} seconds.')\n",
-    "\n",
-    "start = time.time()\n",
-    "tree_lcc_mask = tree_lcc.get_label_mask(points, labels, mask, tilecode)\n",
-    "labels[tree_lcc_mask] = tree_lcc.get_label()\n",
-    "mask[tree_lcc_mask] = False\n",
-    "end = time.time()\n",
-    "print(f'Trees grown in {end-start:.2f} seconds.')"
+    "print(f'Region growing completed in {end-start:.2f} seconds.\\n')"
    ]
   },
   {
@@ -251,49 +220,6 @@
     "# Save the result (this will overwrite the LAS file.)\n",
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "las_utils.label_and_save_las(las, labels, out_file)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c4e60f4-fc18-4208-bec4-9ed76976f60c",
-   "metadata": {},
-   "source": [
-    "## Visualize results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bdc5282-9cd0-48cb-8d28-daf31e6f0cfa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Visualize the resulting match.\n",
-    "((x_min, y_max), (x_max, y_min)) = las_utils.get_bbox_from_tile_code(tilecode)\n",
-    "\n",
-    "ahn_tile = ahn_reader.filter_tile(tilecode)\n",
-    "fast_z = FastGridInterpolator(ahn_tile['x'], ahn_tile['y'],\n",
-    "                              ahn_tile['ground_surface'])\n",
-    "points_z = fast_z(points[:, 0:2])\n",
-    "\n",
-    "plane_mask = (points[:, 2] >= points_z + 1.7) & (points[:, 2] <= points_z + 1.8)\n",
-    "label_set = np.unique(labels[plane_mask])\n",
-    "\n",
-    "fig, ax = plt.subplots(1, constrained_layout=True)\n",
-    "\n",
-    "for label in label_set:\n",
-    "    label_mask = plane_mask & (labels == label)\n",
-    "    scatter = ax.scatter(points[label_mask, 0], points[label_mask, 1], marker='.', label=Labels.get_str(label))\n",
-    "\n",
-    "box = patches.Rectangle((x_min, y_min), x_max-x_min, y_max-y_min, linewidth=1, linestyle='--', edgecolor='grey', fill=False)\n",
-    "\n",
-    "ax.add_patch(box)\n",
-    "ax.set_title(tilecode)\n",
-    "ax.set_xlabel('X')\n",
-    "ax.set_ylabel('Y')\n",
-    "plt.axis('equal')\n",
-    "ax.legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
-    "plt.show()"
    ]
   },
   {
