--- a/notebooks/5. Region growing.ipynb
+++ b/notebooks/5. Region growing.ipynb
@@ -20,10 +20,8 @@
     "# Add project src to path.\n",
     "import set_path\n",
     "\n",
-    "import numpy as np\n",
     "import time\n",
     "\n",
-    "from src.utils.las_utils import label_and_save_las\n",
     "from src.utils.labels import Labels\n",
     "import src.region_growing as growing\n",
     "from src.pipeline import Pipeline"
@@ -37,7 +35,6 @@
    "source": [
     "# In this example we want to grow the building points, the initial seed points.\n",
     "# The ground points must be removed to fast and properly cluster the cloud.\n",
-    "seed_point_label = Labels.BUILDING\n",
     "exclude_labels = (Labels.GROUND,)"
    ]
   },
@@ -62,7 +59,7 @@
    "outputs": [],
    "source": [
     "# Region growing with building points as initial seed points. \n",
-    "region_growing_pcl = growing.RegionGrowing(Labels.BUILDING, exclude_labels)"
+    "region_growing_pcl = growing.RegionGrowing(label=Labels.BUILDING, exclude_labels=exclude_labels)"
    ]
   },
   {
@@ -87,7 +84,7 @@
    "outputs": [],
    "source": [
     "# Region growing with building points as initial seed points. \n",
-    "region_growing_clustering = growing.LabelConnectedComp(Labels.BUILDING, exclude_labels,\n",
+    "region_growing_clustering = growing.LabelConnectedComp(label=Labels.BUILDING, exclude_labels=exclude_labels,\n",
     "                                                       octree_level=10, min_component_size=100)"
    ]
   },
