--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -90,9 +90,7 @@
     "    json_content = ams_bgt_scraper.scrape_amsterdam_bgt(layer, bbox=bbox)\n",
     "    \n",
     "    # Parse the downloaded json response.\n",
-    "    parsed_content, csv_headers = ams_bgt_scraper.parse_polygons(json_content,\n",
-    "                                                                 offset_meter=-0.3, \n",
-    "                                                                 prepare_csv=True)\n",
+    "    parsed_content, csv_headers = ams_bgt_scraper.parse_polygons(json_content, prepare_csv=True)\n",
     "    bgt_road_polygons_csv += parsed_content\n",
     "\n",
     "# Write the csv\n",
