Small restructuring of notebook 0, all set-up stuff now toegterh at the top.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -46,6 +46,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cf2883a-1fd1-4c20-849f-5f7103c802a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up.\n",
+    "\n",
+    "# AHN data folder.\n",
+    "ahn_data_folder = '../datasets/ahn/'\n",
+    "# File with BGT road polygons.\n",
+    "bgt_road_file = '../datasets/bgt/bgt_roads_' + tile_code + '.csv'\n",
+    "# File with <x,y> coordinates of pole-like objects.\n",
+    "bgt_point_file = '../datasets/bgt/custom_points_' + tile_code + '.csv'\n",
+    "\n",
+    "# Some methods use AHN elevation data to determine the height above ground.\n",
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "turned-softball",
    "metadata": {},
@@ -66,9 +86,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data folder for the fusers.\n",
-    "ahn_data_folder = '../datasets/ahn/'\n",
-    "\n",
     "# Ground fuser using pre-processed AHN data.\n",
     "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder,\n",
     "                                   method='npz', target='ground', epsilon=0.2)\n",
@@ -96,15 +113,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# File with road information from BGT.\n",
-    "bgt_data_file = '../datasets/bgt/bgt_roads_' + tile_code + '.csv'\n",
-    "\n",
-    "# We use AHN elevation data to determine whether objects are close enough to the ground.\n",
-    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
-    "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
     "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, \n",
-    "                            bgt_file=bgt_data_file, octree_level=10,\n",
+    "                            bgt_file=bgt_road_file, octree_level=10,\n",
     "                            min_component_size=100, max_above_ground=3,\n",
     "                            min_width_thresh=1.5, max_width_thresh=2.55,\n",
     "                            min_length_thresh=2.0, max_length_thresh=7.0)"
@@ -129,18 +140,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# File with <x,y> coordinates of pole-like objects.\n",
-    "bgt_data_file = '../datasets/bgt/custom_points_' + tile_code + '.csv'\n",
-    "\n",
     "# Parameter settings for each type of object.\n",
     "tree_params = {'seed_height': 1.75, 'min_points': 500, 'max_r': 0.5, 'label_height': 5.}\n",
     "light_params = {'seed_height': 2.25, 'min_points': 400, 'max_r': 0.2, 'label_height': 5.}\n",
     "sign_params = {'seed_height': 1.75, 'min_points': 200, 'max_r': 0.2, 'min_height': 1.2, 'z_max': 2., 'label_height': 3.}\n",
     "\n",
     "# Fusers for BGT point data.\n",
-    "tree_fuser = fusion.BGTPointFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=tree_params)\n",
-    "light_fuser = fusion.BGTPointFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=light_params)\n",
-    "sign_fuser = fusion.BGTPointFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=sign_params)"
+    "tree_fuser = fusion.BGTPointFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=tree_params)\n",
+    "light_fuser = fusion.BGTPointFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=light_params)\n",
+    "sign_fuser = fusion.BGTPointFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=sign_params)"
    ]
   },
   {
@@ -166,9 +174,7 @@
    "outputs": [],
    "source": [
     "# Region growing with building points as initial seed points. \n",
-    "exclude_labels = (Labels.GROUND,)\n",
-    "building_grower = growing.LabelConnectedComp(Labels.BUILDING, exclude_labels,\n",
-    "                                             octree_level=10, min_component_size=100)"
+    "building_grower = growing.LabelConnectedComp(Labels.BUILDING, octree_level=10, min_component_size=100)"
    ]
   },
   {
@@ -257,7 +263,7 @@
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
-    "plot_utils.plot_cloud_slice(out_file, ahn_reader, plane_height=1.75)"
+    "plot_utils.plot_cloud_slice(out_file, ahn_reader, plane_height=1.4)"
    ]
   },
   {
